# Visao-Computacionall

./: CMakeLists.txt  main.cpp  test.c
